Stop using material list for answer options below chart
Since too much custom style is needed when using material list, this doesn't make sense here.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -481,11 +481,6 @@ div {
   padding: 0;
 }
 
-.answer-list-item .mdc-list-item__primary-text {
-  font-size: 12px;
-  font-weight: $font-weight-bold;
-}
-
 .primary-shadow-hover:hover {
   border-color: transparent;
   @extend %primary-shadow;
